[package]
name = "devils_lair"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11.20", features = ["json"] }
serenity = "0.11.6"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
